--- a/templates/turismo_subventana.html
+++ b/templates/turismo_subventana.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turismo Local y Nacional</title>
     <style>
+        /* Ajusta el video para que ocupe toda la pantalla */
+        video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Asegura que el video llene la pantalla sin distorsión */
+        }
+
         body {
             margin: 0;
             padding: 0;
@@ -39,17 +49,6 @@
             text-align: center;
             z-index: 2; /* Asegura que los botones se muestren encima del video */
         }
-
-        /* Estilo para el video de fondo */
-        video {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* Hace que el video cubra toda la pantalla */
-            z-index: -1; /* Coloca el video detrás del contenido */
-        }
     </style>
 </head>
 <body>
@@ -61,8 +60,8 @@
     </div>
 
     <!-- Video de fondo -->
-    <video autoplay muted loop>
-        <source src="{{ url_for('static', filename='images/mm.mp4') }}" type="video/mp4">
+    <video autoplay muted loop playsinline>
+        <source src="{{ url_for('static', filename='images/test.webm') }}" type="video/webm">
         Tu navegador no soporta la etiqueta de video.
     </video>
 </body>
