--- a/templates/turismo_subventana.html
+++ b/templates/turismo_subventana.html
@@ -61,11 +61,19 @@
 
     <!-- Video de fondo -->
     <video id="videoFondo" muted loop playsinline>
-       <source src="{{ url_for('static', filename='images/mm.webm') }}" type="video/webm">
-        Tu navegador no soporta la etiqueta de video.
-    </video>
+    <source src="{{ url_for('static', filename='images/mm.webm') }}" type="video/webm">
+    Tu navegador no soporta la etiqueta de video.
+</video>
 
- <button onclick="document.getElementById('videoFondo').play()">Reproducir Video</button>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        var video = document.getElementById("videoFondo");
+        video.play().catch(error => {
+            console.log("Autoplay bloqueado, esperando interacción del usuario.");
+        });
+    });
+</script>
+
 
 </body>
 </html>
